added alt in imge tag

--- a/Pages/404-Page/index.html
+++ b/Pages/404-Page/index.html
@@ -30,19 +30,21 @@
                   <div class="text-wrapper-2">Home</div>
                   <div class="about">
                     <div class="text-wrapper-3">About</div>
-                    <img class="line" src="img/line-4.svg" />
+                    <img class="line" src="img/line-4.svg" alt="new" />
                   </div>
                   <div class="pages">
-                    <div class="div-wrapper"><div class="text-wrapper-4">Pricing</div></div>
-                    <img class="line" src="img/line-4.svg" />
+                    <div class="div-wrapper">
+                      <div class="text-wrapper-4">Pricing</div>
+                    </div>
+                    <img class="line" src="img/line-4.svg" alt="new" />
                   </div>
                   <div class="project">
                     <div class="text-wrapper-3">My Projects</div>
-                    <img class="line" src="img/line-4.svg" />
+                    <img class="line" src="img/line-4.svg" alt="new" />
                   </div>
                   <div class="contact">
                     <div class="text-wrapper-3">SignIn</div>
-                    <img class="line" src="img/line-4.svg" />
+                    <img class="line" src="img/line-4.svg" alt="new" />
                   </div>
                 </div>
               </div>
