--- a/Pages/HomePage-Ordinary_User/index.html
+++ b/Pages/HomePage-Ordinary_User/index.html
@@ -26,7 +26,12 @@
   <body>
     <div class="home-page-ordinary-user">
       <header class="header">
-        <img class="background-icon" alt="" src="./public/background.svg" />
+        <img
+          class="background-icon"
+          alt=""
+          src="./public/background.svg"
+          alt="new"
+        />
 
         <div class="rectangle">
           <div class="pattern">
@@ -55,7 +60,12 @@
           <div class="profile">Profile</div>
         </div>
       </header>
-      <img class="background-icon1" alt="" src="./public/background.svg" />
+      <img
+        class="background-icon1"
+        alt=""
+        src="./public/background.svg"
+        alt="new"
+      />
 
       <div class="background"></div>
       <section class="name-wrapper">
@@ -91,6 +101,7 @@
             loading="eager"
             alt=""
             src="./public/tdesignmoney.svg"
+            alt="new"
           />
 
           <div class="party-p-r-o-text">
@@ -139,6 +150,7 @@
                       loading="eager"
                       alt=""
                       src="./public/icon.svg"
+                      alt="new"
                     />
 
                     <div class="define-vision-budget">
@@ -192,6 +204,7 @@
               loading="eager"
               alt=""
               src="./public/pattern.svg"
+              alt="new"
             />
 
             <img class="images-icon" alt="" src="./public/images@2x.png" />
@@ -294,12 +307,14 @@
                   class="semicolon-frame-icon"
                   alt=""
                   src="./public/semicolon-frame.svg"
+                  alt="new"
                 />
 
                 <img
                   class="semicolon-frame-icon1"
                   alt=""
                   src="./public/-1.svg"
+                  alt="new"
                 />
               </div>
             </div>
@@ -325,6 +340,7 @@
                       loading="eager"
                       alt=""
                       src="./public/-2.svg"
+                      alt="new"
                     />
                   </div>
                   <div class="text4">
@@ -342,6 +358,7 @@
                       loading="eager"
                       alt=""
                       src="./public/star.svg"
+                      alt="new"
                     />
                   </div>
                 </div>
@@ -367,6 +384,7 @@
                       loading="eager"
                       alt=""
                       src="./public/-3.svg"
+                      alt="new"
                     />
                   </div>
                   <div class="text5">
@@ -384,6 +402,7 @@
                       loading="eager"
                       alt=""
                       src="./public/star.svg"
+                      alt="new"
                     />
                   </div>
                 </div>
@@ -402,6 +421,7 @@
             loading="eager"
             alt=""
             src="./public/background-2.svg"
+            alt="new"
           />
 
           <div class="utility"></div>
@@ -434,6 +454,7 @@
                         loading="eager"
                         alt=""
                         src="./public/icon-1.svg"
+                        alt="new"
                       />
 
                       <div class="call-us-frame">
@@ -454,6 +475,7 @@
                           loading="eager"
                           alt=""
                           src="./public/icon-2.svg"
+                          alt="new"
                         />
                       </div>
                       <div class="call-us-00-container">
