--- a/Pages/Login-Admin/index.html
+++ b/Pages/Login-Admin/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> // Added viewport meta element
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    // Added viewport meta element
     <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="styleguide.css" />
     <link rel="stylesheet" href="style.css" />
@@ -14,9 +15,16 @@
           <div class="group"><div class="group-2"></div></div>
           <div class="back-to-website">
             <div class="text-wrapper">
-              <a href="www.google.com" style="color: whitesmoke;">Back to the website</a>
+              <a href="www.google.com" style="color: whitesmoke"
+                >Back to the website</a
+              >
             </div>
-            <img class="icon-left" src="img/icon-left.svg" alt="new" />
+            <img
+              class="icon-left"
+              src="img/icon-left.svg"
+              alt="new"
+              alt="new"
+            />
           </div>
         </div>
         <div class="group-3">
@@ -41,7 +49,12 @@
                       />
                     </div>
                     <div class="rectangle"></div>
-                    <img class="message" src="img/message-1.svg" alt="new" />
+                    <img
+                      class="message"
+                      src="img/message-1.svg"
+                      alt="new"
+                      alt="new"
+                    />
                   </div>
                   <div class="group-10">
                     <div class="text-wrapper-6">Password</div>
@@ -53,8 +66,13 @@
                           type="password"
                           name="password"
                         />
-                      </div> 
-                      <img class="padlock" src="img/padlock-1.svg" alt="new" />
+                      </div>
+                      <img
+                        class="padlock"
+                        src="img/padlock-1.svg"
+                        alt="new"
+                        alt="new"
+                      />
                     </div>
                   </div>
                 </div>
