--- a/Pages/Pricing/index.html
+++ b/Pages/Pricing/index.html
@@ -15,21 +15,24 @@
               <div class="title-2">
                 <div class="sub-text">
                   <div class="pattern"></div>
-                  <div class="text"><div class="text-wrapper">Testimonial</div></div>
+                  <div class="text">
+                    <div class="text-wrapper">Testimonial</div>
+                  </div>
                 </div>
                 <div class="text-wrapper-2">What Our Customers Say</div>
               </div>
               <div class="aerrow">
                 <div class="overlap-group-wrapper">
                   <div class="overlap-group">
-                    <img class="vector" src="img/vector.svg" /> <img class="img" src="img/vector-6.svg" />
+                    <img class="vector" src="img/vector.svg" alt="new" />
+                    <img class="img" src="img/vector-6.svg" alt="new" />
                   </div>
                 </div>
                 <div class="overlap-wrapper">
                   <div class="overlap">
                     <div class="background"></div>
-                    <img class="vector-2" src="img/vector-5.svg" />
-                    <img class="vector-3" src="img/vector-4.svg" />
+                    <img class="vector-2" src="img/vector-5.svg" alt="new" />
+                    <img class="vector-3" src="img/vector-4.svg" alt="new" />
                   </div>
                 </div>
               </div>
@@ -45,21 +48,26 @@
                         <div class="text-wrapper-4">From Germany</div>
                       </div>
                     </div>
-                    <div class="image-wrapper"><img class="image" src="img/1.svg" /></div>
+                    <div class="image-wrapper">
+                      <img class="image" src="img/1.svg" alt="new" />
+                    </div>
                   </div>
                   <div class="text-2">
                     <p class="i-had-the-most">
-                      &#34;I had the most amazing experience planning my party with this platform! The family
-                      collaboration feature made it so easy for all of us to stay organized and on the same page. Plus,
-                      the custom timeline feature helped me keep track of every detail leading up to the big day. Highly
-                      recommend for anyone looking to throw a stress-free and memorable event!&#34;
+                      &#34;I had the most amazing experience planning my party
+                      with this platform! The family collaboration feature made
+                      it so easy for all of us to stay organized and on the same
+                      page. Plus, the custom timeline feature helped me keep
+                      track of every detail leading up to the big day. Highly
+                      recommend for anyone looking to throw a stress-free and
+                      memorable event!&#34;
                     </p>
                     <div class="star">
-                      <img class="star-2" src="img/star-5.svg" />
-                      <img class="star-3" src="img/star-5.svg" />
-                      <img class="star-4" src="img/star-5.svg" />
-                      <img class="star-5" src="img/star-5.svg" />
-                      <img class="star-6" src="img/star-5.svg" />
+                      <img class="star-2" src="img/star-5.svg" alt="new" />
+                      <img class="star-3" src="img/star-5.svg" alt="new" />
+                      <img class="star-4" src="img/star-5.svg" alt="new" />
+                      <img class="star-5" src="img/star-5.svg" alt="new" />
+                      <img class="star-6" src="img/star-5.svg" alt="new" />
                     </div>
                   </div>
                 </div>
@@ -74,22 +82,26 @@
                         <div class="text-wrapper-6">From Russia</div>
                       </div>
                     </div>
-                    <div class="image-wrapper"><img class="image" src="img/image.svg" /></div>
+                    <div class="image-wrapper">
+                      <img class="image" src="img/image.svg" alt="new" />
+                    </div>
                   </div>
                   <div class="text-2">
                     <p class="i-was-blown-away-by">
-                      &#34;I was blown away by the vendor selection feature on this party planning website! It saved me
-                      so much time and effort by providing a curated list of top vendors in my area. From catering to
-                      decor, I found everything I needed to make my party a success. The budget tracker feature was also
-                      a lifesaver, helping me stay within my budget without sacrificing quality. 5 stars all the
-                      way!&#34;
+                      &#34;I was blown away by the vendor selection feature on
+                      this party planning website! It saved me so much time and
+                      effort by providing a curated list of top vendors in my
+                      area. From catering to decor, I found everything I needed
+                      to make my party a success. The budget tracker feature was
+                      also a lifesaver, helping me stay within my budget without
+                      sacrificing quality. 5 stars all the way!&#34;
                     </p>
                     <div class="star">
-                      <img class="star-2" src="img/star-5.svg" />
-                      <img class="star-3" src="img/star-5.svg" />
-                      <img class="star-4" src="img/star-5.svg" />
-                      <img class="star-5" src="img/star-5.svg" />
-                      <img class="star-6" src="img/star-5.svg" />
+                      <img class="star-2" src="img/star-5.svg" alt="new" />
+                      <img class="star-3" src="img/star-5.svg" alt="new" />
+                      <img class="star-4" src="img/star-5.svg" alt="new" />
+                      <img class="star-5" src="img/star-5.svg" alt="new" />
+                      <img class="star-6" src="img/star-5.svg" alt="new" />
                     </div>
                   </div>
                 </div>
@@ -118,26 +130,28 @@
                   </div>
                 </div>
                 <div class="features">
-                  <img class="line" src="img/line-5.svg" />
+                  <img class="line" src="img/line-5.svg" alt="new" />
                   <div class="element-2">
-                    <img class="line-2" src="img/line-5.svg" />
+                    <img class="line-2" src="img/line-5.svg" alt="new" />
                     <div class="text-wrapper-12">Full event theme access</div>
                   </div>
                   <div class="element-3">
-                    <img class="line-3" src="img/line-5.svg" />
+                    <img class="line-3" src="img/line-5.svg" alt="new" />
                     <div class="text-wrapper-13">Comprehensive budget tool</div>
                   </div>
                   <div class="element-4">
-                    <img class="line-4" src="img/line-5.svg" />
+                    <img class="line-4" src="img/line-5.svg" alt="new" />
                     <div class="text-wrapper-14">Vendor recommendations</div>
                   </div>
                   <div class="element-4">
-                    <img class="line-4" src="img/line-5.svg" />
+                    <img class="line-4" src="img/line-5.svg" alt="new" />
                     <div class="text-wrapper-15">Access for three months</div>
                   </div>
                 </div>
                 <button class="button">
-                  <div class="div-wrapper"><div class="text-wrapper-16">Choose Plan</div></div>
+                  <div class="div-wrapper">
+                    <div class="text-wrapper-16">Choose Plan</div>
+                  </div>
                 </button>
               </div>
             </div>
@@ -153,26 +167,28 @@
                   </div>
                 </div>
                 <div class="features">
-                  <img class="line" src="img/line-10.svg" />
+                  <img class="line" src="img/line-10.svg" alt="new" />
                   <div class="element-2">
-                    <img class="line-2" src="img/line-10.svg" />
+                    <img class="line-2" src="img/line-10.svg" alt="new" />
                     <div class="text-wrapper-20">Full event theme access</div>
                   </div>
                   <div class="element-3">
-                    <img class="line-3" src="img/line-10.svg" />
+                    <img class="line-3" src="img/line-10.svg" alt="new" />
                     <div class="text-wrapper-21">Comprehensive budget tool</div>
                   </div>
                   <div class="element-4">
-                    <img class="line-4" src="img/line-10.svg" />
+                    <img class="line-4" src="img/line-10.svg" alt="new" />
                     <div class="text-wrapper-22">Vendor recommendations</div>
                   </div>
                   <div class="element-4">
-                    <img class="line-4" src="img/line-10.svg" />
+                    <img class="line-4" src="img/line-10.svg" alt="new" />
                     <div class="text-wrapper-23">Access for six months</div>
                   </div>
                 </div>
                 <button class="button">
-                  <div class="overlap-2"><div class="text-wrapper-24">Choose Plan</div></div>
+                  <div class="overlap-2">
+                    <div class="text-wrapper-24">Choose Plan</div>
+                  </div>
                 </button>
               </div>
             </div>
@@ -188,26 +204,28 @@
                   </div>
                 </div>
                 <div class="features">
-                  <img class="line" src="img/line-5.svg" />
+                  <img class="line" src="img/line-5.svg" alt="new" />
                   <div class="element-2">
-                    <img class="line-2" src="img/line-5.svg" />
+                    <img class="line-2" src="img/line-5.svg" alt="new" />
                     <div class="text-wrapper-12">Full event theme access</div>
                   </div>
                   <div class="element-3">
-                    <img class="line-3" src="img/line-5.svg" />
+                    <img class="line-3" src="img/line-5.svg" alt="new" />
                     <div class="text-wrapper-13">Comprehensive budget tool</div>
                   </div>
                   <div class="element-4">
-                    <img class="line-4" src="img/line-5.svg" />
+                    <img class="line-4" src="img/line-5.svg" alt="new" />
                     <div class="text-wrapper-14">Vendor recommendations</div>
                   </div>
                   <div class="element-4">
-                    <img class="line-4" src="img/line-5.svg" />
+                    <img class="line-4" src="img/line-5.svg" alt="new" />
                     <div class="text-wrapper-14">Access for twelve months</div>
                   </div>
                 </div>
                 <button class="button">
-                  <div class="div-wrapper"><div class="text-wrapper-16">Choose Plan</div></div>
+                  <div class="div-wrapper">
+                    <div class="text-wrapper-16">Choose Plan</div>
+                  </div>
                 </button>
               </div>
             </div>
@@ -232,23 +250,25 @@
               <div class="text-wrapper-27">Home</div>
               <div class="about">
                 <div class="text-wrapper-28">About</div>
-                <img class="line-5" src="img/line-4.svg" />
+                <img class="line-5" src="img/line-4.svg" alt="new" />
               </div>
               <div class="pages">
-                <div class="pages-2"><div class="text-wrapper-29">Pricing</div></div>
-                <img class="line-5" src="img/line-4.svg" />
+                <div class="pages-2">
+                  <div class="text-wrapper-29">Pricing</div>
+                </div>
+                <img class="line-5" src="img/line-4.svg" alt="new" />
               </div>
               <div class="project">
                 <div class="text-wrapper-28">My Projects</div>
-                <img class="line-5" src="img/line-4.svg" />
+                <img class="line-5" src="img/line-4.svg" alt="new" />
               </div>
               <div class="contact">
                 <div class="text-wrapper-28">Features</div>
-                <img class="line-5" src="img/line-4.svg" />
+                <img class="line-5" src="img/line-4.svg" alt="new" />
               </div>
               <div class="contact-2">
                 <div class="text-wrapper-28">SignIn</div>
-                <img class="line-5" src="img/line-4.svg" />
+                <img class="line-5" src="img/line-4.svg" alt="new" />
               </div>
             </div>
           </div>
@@ -256,27 +276,37 @@
         <footer class="footer">
           <div class="overlap-3">
             <div class="background-2"></div>
-            <img class="background-3" src="img/background.svg" />
+            <img class="background-3" src="img/background.svg" alt="new" />
             <div class="copyright">
-              <img class="line-6" src="img/line.svg" />
+              <img class="line-6" src="img/line.svg" alt="new" />
               <div class="copyright-partypro-wrapper">
                 <p class="copyright-partypro">
-                  <span class="span">Copyright © PartyPRO | Designed by XXX - Powered by XXX.</span>
+                  <span class="span"
+                    >Copyright © PartyPRO | Designed by XXX - Powered by
+                    XXX.</span
+                  >
                 </p>
               </div>
             </div>
             <div class="content-3">
               <div class="about-us-our-team-wrapper">
-                <p class="about-us-our-team">About Us <br />Our Team <br />Our Project<br />Pricing <br />Contact</p>
+                <p class="about-us-our-team">
+                  About Us <br />Our Team <br />Our Project<br />Pricing
+                  <br />Contact
+                </p>
               </div>
               <div class="subscribe">
                 <div class="content-4">
                   <div class="name-2">
-                    <div class="overlap-group-4"><div class="text-wrapper-30">Email here*</div></div>
+                    <div class="overlap-group-4">
+                      <div class="text-wrapper-30">Email here*</div>
+                    </div>
                   </div>
                   <button class="button-2">
-                    <button class="button-3"><div class="text-wrapper-31">Send Now</div></button>
-                    <img class="follow" src="img/follow.svg" />
+                    <button class="button-3">
+                      <div class="text-wrapper-31">Send Now</div>
+                    </button>
+                    <img class="follow" src="img/follow.svg" alt="new" />
                   </button>
                 </div>
               </div>
@@ -289,21 +319,37 @@
               </div>
               <div class="content-5">
                 <p class="join-the-partypro">
-                  Join the PartyPRO community for exclusive tips, inspiration, and offers to make your celebrations
-                  truly unforgettable. Let&#39;s create memories together!
+                  Join the PartyPRO community for exclusive tips, inspiration,
+                  and offers to make your celebrations truly unforgettable.
+                  Let&#39;s create memories together!
                 </p>
                 <div class="address">
                   <div class="email">
-                    <a href="mailto:contact@hvcargologistics.com" target="_blank" rel="noopener noreferrer"
-                      ><div class="text-wrapper-32">Email<br />contact@partyprocom</div></a
+                    <a
+                      href="mailto:contact@hvcargologistics.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      ><div class="text-wrapper-32">
+                        Email<br />contact@partyprocom
+                      </div></a
                     >
                     <div class="icon">
-                      <div class="vector-wrapper"><img class="vector-4" src="img/vector-2.svg" /></div>
+                      <div class="vector-wrapper">
+                        <img
+                          class="vector-4"
+                          src="img/vector-2.svg"
+                          alt="new"
+                        />
+                      </div>
                     </div>
                   </div>
                   <div class="call">
-                    <p class="text-wrapper-32">Call Us <br />(00) 112 365 489</p>
-                    <div class="icon"><img class="vector-5" src="img/vector-1.svg" /></div>
+                    <p class="text-wrapper-32">
+                      Call Us <br />(00) 112 365 489
+                    </p>
+                    <div class="icon">
+                      <img class="vector-5" src="img/vector-1.svg" alt="new" />
+                    </div>
                   </div>
                 </div>
               </div>
@@ -316,7 +362,9 @@
             <div class="text-3">
               <div class="sub-text-3">
                 <div class="pattern"></div>
-                <div class="text-4"><div class="text-wrapper-33">Our Prices</div></div>
+                <div class="text-4">
+                  <div class="text-wrapper-33">Our Prices</div>
+                </div>
               </div>
               <div class="text-wrapper-34">Our Pricing</div>
             </div>
