--- a/Pages/Register-Ordinary/index.html
+++ b/Pages/Register-Ordinary/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> // Add viewport meta element
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    // Add viewport meta element
     <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="styleguide.css" />
     <link rel="stylesheet" href="style.css" />
@@ -14,7 +15,12 @@
           <div class="group"><div class="group-2"></div></div>
           <div class="back-to-website">
             <div class="text-wrapper">Back to the website</div>
-            <img class="icon-left" src="img/icon-left.svg" alt="new" />
+            <img
+              class="icon-left"
+              src="img/icon-left.svg"
+              alt="new"
+              alt="new"
+            />
           </div>
         </div>
         <div class="group-3">
@@ -38,7 +44,12 @@
                 name="email"
               />
               <div class="rectangle"></div>
-              <img class="message" src="img/message-1.svg" alt="new" />
+              <img
+                class="message"
+                src="img/message-1.svg"
+                alt="new"
+                alt="new"
+              />
             </div>
             <div class="group-7">
               <div class="text-wrapper-6">Confrim Password</div>
@@ -50,7 +61,12 @@
                   type="password"
                   name="cpassword"
                 />
-                <img class="padlock" src="img/padlock-1-1.svg" alt="'new" />
+                <img
+                  class="padlock"
+                  src="img/padlock-1-1.svg"
+                  alt="new"
+                  alt="'new"
+                />
               </div>
             </div>
             <div class="group-9">
@@ -63,7 +79,7 @@
                   type="password"
                   name="password"
                 />
-                <img class="img" src="img/padlock-1.svg" alt="new" />
+                <img class="img" src="img/padlock-1.svg" alt="new" alt="new" />
               </div>
             </div>
             <div class="overlap-group-wrapper">
@@ -83,7 +99,7 @@
                   />
                   <div class="rectangle-3"></div>
                 </div>
-                <img class="user" src="img/user-1.svg" alt="" new />
+                <img class="user" src="img/user-1.svg" alt="new" alt="" new />
               </div>
             </div>
           </form>
