--- a/Pages/UserType/index.html
+++ b/Pages/UserType/index.html
@@ -24,16 +24,22 @@
                   <div class="pattern-4"></div>
                 </div>
               </div>
-              <img class="friends-celebrating" src="img/friends-celebrating-christmas-at-party.png" />
+              <img
+                class="friends-celebrating"
+                src="img/friends-celebrating-christmas-at-party.png"
+              />
             </div>
             <div class="overlap-2">
               <div class="text-wrapper-2">Administrator</div>
-              <img class="woman-connects-a" src="img/woman-connects-a-laptop-to-the-server.png" />
+              <img
+                class="woman-connects-a"
+                src="img/woman-connects-a-laptop-to-the-server.png"
+              />
             </div>
           </div>
           <div class="back-to-website">
             <div class="text-wrapper-3">Back to the website</div>
-            <img class="icon-left" src="img/icon-left.svg" />
+            <img class="icon-left" src="img/icon-left.svg" alt="new" />
           </div>
         </div>
       </div>
