--- a/Pages/Vendors 1/index.html
+++ b/Pages/Vendors 1/index.html
@@ -14,17 +14,21 @@
           <div class="rectangle-2"></div>
           <div class="frame"><div class="text-wrapper">Search</div></div>
           <div class="component">
-            <img class="location" src="img/location-1-2.svg" />
+            <img class="location" src="img/location-1-2.svg" alt="new" />
             <div class="where-are-you-going">Search Vendors</div>
           </div>
           <div class="text">
-            <p class="elevate-every">Elevate Every Celebration, <br />One Detail at a Time</p>
+            <p class="elevate-every">
+              Elevate Every Celebration, <br />One Detail at a Time
+            </p>
           </div>
         </div>
         <div class="text-wrapper-2">Venues</div>
         <div class="text-wrapper-3">Entertainers</div>
         <div class="text-wrapper-4">Caters</div>
-        <div class="div-wrapper"><div class="text-wrapper-5">The Crystal Ballroom</div></div>
+        <div class="div-wrapper">
+          <div class="text-wrapper-5">The Crystal Ballroom</div>
+        </div>
         <img class="img" src="img/rectangle-21.png" />
         <div class="frame-2"><div class="text-wrapper-6">PartyPulse</div></div>
         <div class="overlap-group">
@@ -34,27 +38,37 @@
           <footer class="footer">
             <div class="overlap-2">
               <div class="background"></div>
-              <img class="background-2" src="img/background-1.svg" />
+              <img class="background-2" src="img/background-1.svg" alt="new" />
               <div class="copyright">
-                <img class="line" src="img/line.svg" />
+                <img class="line" src="img/line.svg" alt="new" />
                 <div class="copyright-partypro-wrapper">
                   <p class="copyright-partypro">
-                    <span class="span">Copyright © PartyPRO | Designed by XXX - Powered by XXX.</span>
+                    <span class="span"
+                      >Copyright © PartyPRO | Designed by XXX - Powered by
+                      XXX.</span
+                    >
                   </p>
                 </div>
               </div>
               <div class="content">
                 <div class="pages">
-                  <p class="about-us-our-team">About Us <br />Our Team <br />Our Project<br />Pricing <br />Contact</p>
+                  <p class="about-us-our-team">
+                    About Us <br />Our Team <br />Our Project<br />Pricing
+                    <br />Contact
+                  </p>
                 </div>
                 <div class="subscribe">
                   <div class="content-2">
                     <div class="name">
-                      <div class="overlap-group-2"><div class="text-wrapper-9">Email here*</div></div>
+                      <div class="overlap-group-2">
+                        <div class="text-wrapper-9">Email here*</div>
+                      </div>
                     </div>
                     <button class="button">
-                      <button class="button-2"><div class="text-wrapper-10">Send Now</div></button>
-                      <img class="follow" src="img/follow.svg" />
+                      <button class="button-2">
+                        <div class="text-wrapper-10">Send Now</div>
+                      </button>
+                      <img class="follow" src="img/follow.svg" alt="new" />
                     </button>
                   </div>
                 </div>
@@ -67,21 +81,41 @@
                 </div>
                 <div class="content-3">
                   <p class="join-the-partypro">
-                    Join the PartyPRO community for exclusive tips, inspiration, and offers to make your celebrations
-                    truly unforgettable. Let&#39;s create memories together!
+                    Join the PartyPRO community for exclusive tips, inspiration,
+                    and offers to make your celebrations truly unforgettable.
+                    Let&#39;s create memories together!
                   </p>
                   <div class="address">
                     <div class="email">
-                      <a href="mailto:contact@hvcargologistics.com" target="_blank" rel="noopener noreferrer"
-                        ><div class="text-wrapper-12">Email<br />contact@partyprocom</div></a
+                      <a
+                        href="mailto:contact@hvcargologistics.com"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        ><div class="text-wrapper-12">
+                          Email<br />contact@partyprocom
+                        </div></a
                       >
                       <div class="icon">
-                        <div class="vector-wrapper"><img class="vector" src="img/vector-1.svg" /></div>
+                        <div class="vector-wrapper">
+                          <img
+                            class="vector"
+                            src="img/vector-1.svg"
+                            alt="new"
+                          />
+                        </div>
                       </div>
                     </div>
                     <div class="call">
-                      <p class="text-wrapper-12">Call Us <br />(00) 112 365 489</p>
-                      <div class="icon"><img class="vector-2" src="img/vector-2.svg" /></div>
+                      <p class="text-wrapper-12">
+                        Call Us <br />(00) 112 365 489
+                      </p>
+                      <div class="icon">
+                        <img
+                          class="vector-2"
+                          src="img/vector-2.svg"
+                          alt="new"
+                        />
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -90,13 +124,19 @@
             </div>
           </footer>
         </div>
-        <div class="frame-3"><div class="text-wrapper-13">Riverside Manor</div></div>
+        <div class="frame-3">
+          <div class="text-wrapper-13">Riverside Manor</div>
+        </div>
         <img class="rectangle-3" src="img/rectangle-9.png" />
         <div class="frame-4"><div class="text-wrapper-13">FunFizz</div></div>
-        <div class="frame-5"><div class="text-wrapper-6">The Garden Pavilion</div></div>
+        <div class="frame-5">
+          <div class="text-wrapper-6">The Garden Pavilion</div>
+        </div>
         <img class="rectangle-4" src="img/rectangle-10.png" />
         <div class="frame-6"><div class="text-wrapper-6">SparkSplash</div></div>
-        <div class="frame-7"><div class="text-wrapper-6">Sunset Terrace Events</div></div>
+        <div class="frame-7">
+          <div class="text-wrapper-6">Sunset Terrace Events</div>
+        </div>
         <img class="rectangle-5" src="img/rectangle-11.png" />
         <div class="frame-8"><div class="text-wrapper-6">FestFusion</div></div>
         <div class="div-2">
@@ -118,35 +158,43 @@
               <div class="text-wrapper-14">Home</div>
               <div class="about">
                 <div class="text-wrapper-15">About</div>
-                <img class="line-2" src="img/line-4-1.svg" />
+                <img class="line-2" src="img/line-4-1.svg" alt="new" />
               </div>
               <div class="pages-2">
-                <div class="pages-3"><div class="text-wrapper-16">Pricing</div></div>
-                <img class="line-2" src="img/line-4-1.svg" />
+                <div class="pages-3">
+                  <div class="text-wrapper-16">Pricing</div>
+                </div>
+                <img class="line-2" src="img/line-4-1.svg" alt="new" />
               </div>
               <div class="project">
                 <div class="text-wrapper-15">My Projects</div>
-                <img class="line-2" src="img/line-4-1.svg" />
+                <img class="line-2" src="img/line-4-1.svg" alt="new" />
               </div>
               <div class="contact">
                 <div class="text-wrapper-15">Features</div>
-                <img class="line-2" src="img/line-4-1.svg" />
+                <img class="line-2" src="img/line-4-1.svg" alt="new" />
               </div>
               <div class="contact-2">
                 <div class="text-wrapper-15">SignIn</div>
-                <img class="line-2" src="img/line-4-1.svg" />
+                <img class="line-2" src="img/line-4-1.svg" alt="new" />
               </div>
             </div>
           </div>
         </div>
         <img class="rectangle-6" src="img/rectangle-25.png" />
-        <div class="frame-9"><div class="text-wrapper-6">FlavorFiesta</div></div>
+        <div class="frame-9">
+          <div class="text-wrapper-6">FlavorFiesta</div>
+        </div>
         <img class="rectangle-7" src="img/rectangle-26.png" />
-        <div class="frame-10"><div class="text-wrapper-13">DelishDash</div></div>
+        <div class="frame-10">
+          <div class="text-wrapper-13">DelishDash</div>
+        </div>
         <img class="rectangle-8" src="img/rectangle-27.png" />
         <div class="frame-11"><div class="text-wrapper-6">CraveCraze</div></div>
         <img class="rectangle-9" src="img/rectangle-28.png" />
-        <div class="frame-12"><div class="text-wrapper-6">SavorySparks</div></div>
+        <div class="frame-12">
+          <div class="text-wrapper-6">SavorySparks</div>
+        </div>
         <div class="text-wrapper-17">See more</div>
         <div class="text-wrapper-18">Florists</div>
         <img class="rectangle-10" src="img/rectangle-29.png" />
@@ -166,7 +214,9 @@
         <img class="rectangle-16" src="img/rectangle-35.png" />
         <div class="frame-19"><div class="text-wrapper-6">EventEase</div></div>
         <img class="rectangle-17" src="img/rectangle-36.png" />
-        <div class="frame-20"><div class="text-wrapper-6">GatherGenius</div></div>
+        <div class="frame-20">
+          <div class="text-wrapper-6">GatherGenius</div>
+        </div>
         <div class="text-wrapper-21">See more</div>
         <div class="text-wrapper-22">See more</div>
         <div class="text-wrapper-23">See more</div>
