--- a/Pages/Checkout/index.html
+++ b/Pages/Checkout/index.html
@@ -13,36 +13,50 @@
           <div class="rectangle"></div>
           <div class="rectangle-2"></div>
           <div class="text-wrapper">Payment options</div>
-          <div class="frame"><div class="text-wrapper-2">Email address</div></div>
-          <div class="div-wrapper"><div class="text-wrapper-2">Email address</div></div>
-          <div class="frame-2"><div class="text-wrapper-2">Email address</div></div>
-          <div class="frame-3"><div class="text-wrapper-2">Email address</div></div>
+          <div class="frame">
+            <div class="text-wrapper-2">Email address</div>
+          </div>
+          <div class="div-wrapper">
+            <div class="text-wrapper-2">Email address</div>
+          </div>
+          <div class="frame-2">
+            <div class="text-wrapper-2">Email address</div>
+          </div>
+          <div class="frame-3">
+            <div class="text-wrapper-2">Email address</div>
+          </div>
           <div class="frame-4">
             <div class="text-wrapper-3">Month</div>
-            <img class="arrow-down" src="img/arrow-down-1.svg" />
+            <img class="arrow-down" src="img/arrow-down-1.svg" alt="new" />
           </div>
           <div class="frame-5">
             <div class="text-wrapper-3">Year</div>
-            <img class="arrow-down" src="img/arrow-down-1.svg" />
+            <img class="arrow-down" src="img/arrow-down-1.svg" alt="new" />
           </div>
           <div class="text-wrapper-4">Name on card</div>
           <div class="text-wrapper-5">Debit/Credit card number</div>
           <div class="text-wrapper-6">Security Code</div>
           <div class="text-wrapper-7">Billing Zip code</div>
           <div class="text-wrapper-8">Expiration Date</div>
-          <img class="img" src="img/card-tick-1.svg" />
+          <img class="img" src="img/card-tick-1.svg" alt="new" />
           <div class="rectangle-3"></div>
           <div class="frame-6">
             <div class="frame-7">
-              <div class="frame-8"><div class="text-wrapper-9">Debit/Credit Card</div></div>
+              <div class="frame-8">
+                <div class="text-wrapper-9">Debit/Credit Card</div>
+              </div>
               <div class="rectangle-4"></div>
             </div>
             <div class="frame-7">
-              <div class="frame-8"><div class="text-wrapper-9">Paypal</div></div>
+              <div class="frame-8">
+                <div class="text-wrapper-9">Paypal</div>
+              </div>
               <div class="rectangle-5"></div>
             </div>
             <div class="frame-7">
-              <div class="frame-8"><div class="text-wrapper-9">Bank transfer</div></div>
+              <div class="frame-8">
+                <div class="text-wrapper-9">Bank transfer</div>
+              </div>
               <div class="rectangle-5"></div>
             </div>
           </div>
@@ -60,7 +74,10 @@
           <div class="rectangle-11"></div>
           <p class="p">Important information about your booking</p>
           <p class="by-clicking-the">
-            <span class="span">By clicking the button below, I acknowledge that I have reviewed the </span>
+            <span class="span"
+              >By clicking the button below, I acknowledge that I have reviewed
+              the
+            </span>
             <span class="text-wrapper-10">Privacy Statement</span>
             <span class="span"> and have reviewd and accept the </span>
             <span class="text-wrapper-10">Rules and Restrictions</span>
@@ -69,34 +86,47 @@
             <span class="span">.</span>
           </p>
           <p class="text-wrapper-11">
-            We use secure transmission and encrypted storage to protect your personal information
+            We use secure transmission and encrypted storage to protect your
+            personal information
           </p>
-          <img class="lock-circle" src="img/lock-circle-1.svg" />
-          <div class="frame-9"><div class="text-wrapper-12">Complete Booking</div></div>
+          <img class="lock-circle" src="img/lock-circle-1.svg" alt="new" />
+          <div class="frame-9">
+            <div class="text-wrapper-12">Complete Booking</div>
+          </div>
           <footer class="footer">
             <div class="overlap-2">
               <div class="background"></div>
-              <img class="background-2" src="img/background.svg" />
+              <img class="background-2" src="img/background.svg" alt="new" />
               <div class="copyright">
-                <img class="line" src="img/line.svg" />
+                <img class="line" src="img/line.svg" alt="new" />
                 <div class="copyright-partypro-wrapper">
                   <p class="copyright-partypro">
-                    <span class="text-wrapper-13">Copyright © PartyPRO | Designed by XXX - Powered by XXX.</span>
+                    <span class="text-wrapper-13"
+                      >Copyright © PartyPRO | Designed by XXX - Powered by
+                      XXX.</span
+                    >
                   </p>
                 </div>
               </div>
               <div class="content">
                 <div class="pages">
-                  <p class="about-us-our-team">About Us <br />Our Team <br />Our Project<br />Pricing <br />Contact</p>
+                  <p class="about-us-our-team">
+                    About Us <br />Our Team <br />Our Project<br />Pricing
+                    <br />Contact
+                  </p>
                 </div>
                 <div class="subscribe">
                   <div class="content-2">
                     <div class="name">
-                      <div class="overlap-group-2"><div class="text-wrapper-14">Email here*</div></div>
+                      <div class="overlap-group-2">
+                        <div class="text-wrapper-14">Email here*</div>
+                      </div>
                     </div>
                     <button class="button">
-                      <button class="button-2"><div class="text-wrapper-15">Send Now</div></button>
-                      <img class="follow" src="img/follow.svg" />
+                      <button class="button-2">
+                        <div class="text-wrapper-15">Send Now</div>
+                      </button>
+                      <img class="follow" src="img/follow.svg" alt="new" />
                     </button>
                   </div>
                 </div>
@@ -109,21 +139,37 @@
                 </div>
                 <div class="content-3">
                   <p class="join-the-partypro">
-                    Join the PartyPRO community for exclusive tips, inspiration, and offers to make your celebrations
-                    truly unforgettable. Let&#39;s create memories together!
+                    Join the PartyPRO community for exclusive tips, inspiration,
+                    and offers to make your celebrations truly unforgettable.
+                    Let&#39;s create memories together!
                   </p>
                   <div class="address">
                     <div class="email">
-                      <a href="mailto:contact@hvcargologistics.com" target="_blank" rel="noopener noreferrer"
-                        ><div class="text-wrapper-17">Email<br />contact@partyprocom</div></a
+                      <a
+                        href="mailto:contact@hvcargologistics.com"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        ><div class="text-wrapper-17">
+                          Email<br />contact@partyprocom
+                        </div></a
                       >
                       <div class="icon">
-                        <div class="vector-wrapper"><img class="vector" src="img/vector-1.svg" /></div>
+                        <div class="vector-wrapper">
+                          <img
+                            class="vector"
+                            src="img/vector-1.svg"
+                            alt="new"
+                          />
+                        </div>
                       </div>
                     </div>
                     <div class="call">
-                      <p class="text-wrapper-17">Call Us <br />(00) 112 365 489</p>
-                      <div class="icon"><img class="vector-2" src="img/vector.svg" /></div>
+                      <p class="text-wrapper-17">
+                        Call Us <br />(00) 112 365 489
+                      </p>
+                      <div class="icon">
+                        <img class="vector-2" src="img/vector.svg" alt="new" />
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -152,19 +198,21 @@
                   <div class="text-wrapper-18">Home</div>
                   <div class="about">
                     <div class="text-wrapper-19">About</div>
-                    <img class="line-2" src="img/line-4.svg" />
+                    <img class="line-2" src="img/line-4.svg" alt="new" />
                   </div>
                   <div class="pages-2">
-                    <div class="pages-3"><div class="text-wrapper-20">Pricing</div></div>
-                    <img class="line-2" src="img/line-4.svg" />
+                    <div class="pages-3">
+                      <div class="text-wrapper-20">Pricing</div>
+                    </div>
+                    <img class="line-2" src="img/line-4.svg" alt="new" />
                   </div>
                   <div class="project">
                     <div class="text-wrapper-19">My Projects</div>
-                    <img class="line-2" src="img/line-4.svg" />
+                    <img class="line-2" src="img/line-4.svg" alt="new" />
                   </div>
                   <div class="contact">
                     <div class="text-wrapper-19">SignIn</div>
-                    <img class="line-2" src="img/line-4.svg" />
+                    <img class="line-2" src="img/line-4.svg" alt="new" />
                   </div>
                 </div>
               </div>
@@ -174,25 +222,33 @@
         <div class="text-wrapper-21">Secure your reservation</div>
         <div class="overlap-3">
           <p class="check-the-latest">
-            <span class="text-wrapper-22">Check the latest COVID-19 restrictions before you travel. </span>
+            <span class="text-wrapper-22"
+              >Check the latest COVID-19 restrictions before you travel.
+            </span>
             <span class="text-wrapper-23">Learn more</span>
           </p>
-          <img class="danger" src="img/danger-1.svg" />
+          <img class="danger" src="img/danger-1.svg" alt="new" />
         </div>
         <div class="overlap-4">
           <div class="overlap-5">
             <div class="text-wrapper-24">Basic</div>
-            <img class="img" src="img/security-user-1.svg" />
+            <img class="img" src="img/security-user-1.svg" alt="new" />
             <div class="text-wrapper-25">(Three Months)</div>
           </div>
-          <div class="frame-10"><div class="text-wrapper-2">Email address</div></div>
+          <div class="frame-10">
+            <div class="text-wrapper-2">Email address</div>
+          </div>
           <div class="frame-11">
             <img class="image-6" src="img/image-5.png" />
             <div class="text-wrapper-26">+61</div>
-            <img class="arrow-down" src="img/arrow-down-1-2.svg" />
+            <img class="arrow-down" src="img/arrow-down-1-2.svg" alt="new" />
           </div>
-          <div class="frame-12"><div class="text-wrapper-2">Email address</div></div>
-          <div class="frame-13"><div class="text-wrapper-2">Email address</div></div>
+          <div class="frame-12">
+            <div class="text-wrapper-2">Email address</div>
+          </div>
+          <div class="frame-13">
+            <div class="text-wrapper-2">Email address</div>
+          </div>
           <div class="text-wrapper-27">First name</div>
           <div class="text-wrapper-28">Mobile number</div>
           <div class="text-wrapper-29">Last name</div>
@@ -201,7 +257,9 @@
         </div>
         <div class="overlap-6">
           <img class="rectangle-14" src="img/rectangle-68.png" />
-          <div class="non-refundable-wrapper"><div class="non-refundable">&nbsp;&nbsp; Non refundable</div></div>
+          <div class="non-refundable-wrapper">
+            <div class="non-refundable">&nbsp;&nbsp; Non refundable</div>
+          </div>
           <div class="text-wrapper-31">Basic</div>
           <div class="group">
             <div class="text-wrapper-32">4.5 (1200 Reviews)</div>
@@ -209,16 +267,24 @@
           </div>
         </div>
         <div class="overlap-7">
-          <div class="frame-14"><div class="text-wrapper-33">Price Details</div></div>
+          <div class="frame-14">
+            <div class="text-wrapper-33">Price Details</div>
+          </div>
           <div class="text-wrapper-34">Total</div>
           <div class="text-wrapper-35">Basic (3 months)</div>
           <div class="text-wrapper-36">$ 39.00</div>
           <div class="text-wrapper-37">$39</div>
-          <p class="text-wrapper-38">Use a coupon, credit or promotional code</p>
-          <img class="vector-3" src="img/vector-2-1.svg" />
-          <div class="frame-15"><div class="text-wrapper-2">Email address</div></div>
+          <p class="text-wrapper-38">
+            Use a coupon, credit or promotional code
+          </p>
+          <img class="vector-3" src="img/vector-2-1.svg" alt="new" />
+          <div class="frame-15">
+            <div class="text-wrapper-2">Email address</div>
+          </div>
           <div class="text-wrapper-39">Coupon code</div>
-          <div class="frame-16"><div class="text-wrapper-12">Apply Coupon</div></div>
+          <div class="frame-16">
+            <div class="text-wrapper-12">Apply Coupon</div>
+          </div>
         </div>
       </div>
     </div>
