--- a/Pages/Login/LoginUser.html
+++ b/Pages/Login/LoginUser.html
@@ -1,4 +1,4 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <html>
   <head>
     <meta charset="utf-8" />
@@ -17,7 +17,12 @@
                 >Back to the website</a
               >
             </div>
-            <img class="icon-left" src="../Login-Admin/img/icon-left.svg"  alt="new"/>
+            <img
+              class="icon-left"
+              src="../Login-Admin/img/icon-left.svg"
+              alt="new"
+              alt="new"
+            />
           </div>
         </div>
         <div class="group-3">
@@ -51,7 +56,9 @@
                     <div class="rectangle"></div>
                     <img
                       class="message"
-                      src="../Login-Admin/img/message-1.svg" alt="new"
+                      src="../Login-Admin/img/message-1.svg"
+                      alt="new"
+                      alt="new"
                     />
                   </div>
                   <div class="group-10">
@@ -67,7 +74,9 @@
                       </div>
                       <img
                         class="padlock"
-                        src="../Login-Admin/img/padlock-1.svg" alt="new"
+                        src="../Login-Admin/img/padlock-1.svg"
+                        alt="new"
+                        alt="new"
                       />
                     </div>
                   </div>
