--- a/Pages/my projects/index.html
+++ b/Pages/my projects/index.html
@@ -19,7 +19,9 @@
           </div>
           <div class="text-wrapper-5">Includes taxes and fees</div>
           <div class="text-wrapper-6">4.5 (1200 Reviews)</div>
-          <div class="div-wrapper"><div class="text-wrapper-7">View party details</div></div>
+          <div class="div-wrapper">
+            <div class="text-wrapper-7">View party details</div>
+          </div>
           <img class="group" src="img/group-5.png" />
           <div class="frame-2">
             <div class="text-wrapper-8">Non refundable</div>
@@ -45,23 +47,25 @@
               <div class="text-wrapper-10">Home</div>
               <div class="about">
                 <div class="text-wrapper-11">About</div>
-                <img class="line" src="img/line-4-1.svg" />
+                <img class="line" src="img/line-4-1.svg" alt="new" />
               </div>
               <div class="pages">
-                <div class="pages-2"><div class="text-wrapper-12">Pricing</div></div>
-                <img class="line" src="img/line-4-1.svg" />
+                <div class="pages-2">
+                  <div class="text-wrapper-12">Pricing</div>
+                </div>
+                <img class="line" src="img/line-4-1.svg" alt="new" />
               </div>
               <div class="project">
                 <div class="text-wrapper-11">My Projects</div>
-                <img class="line" src="img/line-4-1.svg" />
+                <img class="line" src="img/line-4-1.svg" alt="new" />
               </div>
               <div class="contact">
                 <div class="text-wrapper-11">Features</div>
-                <img class="line" src="img/line-4-1.svg" />
+                <img class="line" src="img/line-4-1.svg" alt="new" />
               </div>
               <div class="contact-2">
                 <div class="text-wrapper-11">SignIn</div>
-                <img class="line" src="img/line-4-1.svg" />
+                <img class="line" src="img/line-4-1.svg" alt="new" />
               </div>
             </div>
           </div>
@@ -69,27 +73,37 @@
         <footer class="footer">
           <div class="overlap-group">
             <div class="background"></div>
-            <img class="img" src="img/background-1.svg" />
+            <img class="img" src="img/background-1.svg" alt="new" />
             <div class="copyright">
-              <img class="line-2" src="img/line.svg" />
+              <img class="line-2" src="img/line.svg" alt="new" />
               <div class="copyright-partypro-wrapper">
                 <p class="copyright-partypro">
-                  <span class="span">Copyright © PartyPRO | Designed by XXX - Powered by XXX.</span>
+                  <span class="span"
+                    >Copyright © PartyPRO | Designed by XXX - Powered by
+                    XXX.</span
+                  >
                 </p>
               </div>
             </div>
             <div class="content">
               <div class="about-us-our-team-wrapper">
-                <p class="about-us-our-team">About Us <br />Our Team <br />Our Project<br />Pricing <br />Contact</p>
+                <p class="about-us-our-team">
+                  About Us <br />Our Team <br />Our Project<br />Pricing
+                  <br />Contact
+                </p>
               </div>
               <div class="subscribe">
                 <div class="content-2">
                   <div class="name">
-                    <div class="overlap-group-2"><div class="text-wrapper-13">Email here*</div></div>
+                    <div class="overlap-group-2">
+                      <div class="text-wrapper-13">Email here*</div>
+                    </div>
                   </div>
                   <button class="button">
-                    <button class="button-2"><div class="text-wrapper-14">Send Now</div></button>
-                    <img class="follow" src="img/follow.svg" />
+                    <button class="button-2">
+                      <div class="text-wrapper-14">Send Now</div>
+                    </button>
+                    <img class="follow" src="img/follow.svg" alt="new" />
                   </button>
                 </div>
               </div>
@@ -102,21 +116,33 @@
               </div>
               <div class="content-3">
                 <p class="join-the-partypro">
-                  Join the PartyPRO community for exclusive tips, inspiration, and offers to make your celebrations
-                  truly unforgettable. Let&#39;s create memories together!
+                  Join the PartyPRO community for exclusive tips, inspiration,
+                  and offers to make your celebrations truly unforgettable.
+                  Let&#39;s create memories together!
                 </p>
                 <div class="address">
                   <div class="email">
-                    <a href="mailto:contact@hvcargologistics.com" target="_blank" rel="noopener noreferrer"
-                      ><div class="text-wrapper-15">Email<br />contact@partyprocom</div></a
+                    <a
+                      href="mailto:contact@hvcargologistics.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      ><div class="text-wrapper-15">
+                        Email<br />contact@partyprocom
+                      </div></a
                     >
                     <div class="icon">
-                      <div class="vector-wrapper"><img class="vector" src="img/vector-1.svg" /></div>
+                      <div class="vector-wrapper">
+                        <img class="vector" src="img/vector-1.svg" alt="new" />
+                      </div>
                     </div>
                   </div>
                   <div class="call">
-                    <p class="text-wrapper-15">Call Us <br />(00) 112 365 489</p>
-                    <div class="icon"><img class="vector-2" src="img/vector-2.svg" /></div>
+                    <p class="text-wrapper-15">
+                      Call Us <br />(00) 112 365 489
+                    </p>
+                    <div class="icon">
+                      <img class="vector-2" src="img/vector-2.svg" alt="new" />
+                    </div>
                   </div>
                 </div>
               </div>
